--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
+certifi==2020.12.5
+chardet==4.0.0
 Django==2.2.17
+django-excel==0.0.10
+et-xmlfile==1.0.1
 gunicorn==20.0.4
+idna==2.10
+jdcal==1.4.1
+lml==0.1.0
+numpy==1.20.1
+openpyxl==3.0.6
+pandas==1.2.2
 Pillow==8.0.1
 psycopg2-binary==2.8.6
+pyexcel==0.6.6
+pyexcel-io==0.6.4
+pyexcel-webio==0.1.4
+python-dateutil==2.8.1
 pytz==2020.5
+requests==2.25.1
+six==1.15.0
 sqlparse==0.4.1
+tablib==3.0.0
+texttable==1.6.3
+urllib3==1.26.3
+xlrd==2.0.1
+xlwt==1.3.0
